--- a/direction.org
+++ b/direction.org
@@ -3,7 +3,7 @@
 ** DONE uptake CSV into hashes in python
 ** DONE output the whole thing, in emacs format, to terminal
 ** DONE output to a saved file that overwrites
-** CLI input, but no output changes, for 1) life or life+work 2) priority
+** DONE CLI input, but no output changes, for 1) life or life+work 2) priority
 ** Output changes in results using CLI
 ** MVP? outfit for AM routine and use for 3 days
 * goals
