--- a/todays_routine.org
+++ b/todays_routine.org
@@ -1,14 +1,36 @@
-* Did yesterday's routines?
+"Investing in yourself is the most important investment you'll ever make in your life...there's no financial investment that'll ever match it, because if you develop more skill, more ability, more insight, more capacity, that's what's really going to provide economic freedom." -Warren Buffet
+"Your body is designed for success in the past. It is an antique biological machine that evolved in response to a world that no longer exists." -Zimbardo
+** 1. morning
+*** Did yesterday's routines?
 Write down on a piece of displayed paper priority level and if did routines yesterday
-* Gratitude (AM)
+*** Gratitude (AM)
 1 minute of gratitude - soaring happiness at points - for my life
-* Read five major goals
+*** Read five major goals
 Care a lot about the opinions of people I've deliberately selected by person and opinion area; care less about other opinions
 Be an excellent husband and father
 Build strong friendships
 Keep learning until I die
 Find meaningful work
-* Review personal weekly goals
+*** Review personal weekly goals
 For now, manually lookup. TODO - include
-* Set personal daily goals
+*** Set personal daily goals
 One to three goals, added to life todos today
+*** If Janie has Kenzo tomorrow estimate arrival time to her
+*** Set 30 minutes of focused life work time
+** 2. afternoon
+*** Exercise: do 10 pushups and 25 air squats
+Only applies if no bike up the hill or run at least a mile today
+** 3. evening
+*** Gratitude (PM)
+1 minute of gratitude - soaring happiness at points - for my life
+*** Floss
+*** Journaling
+*** Journal visualizations
+Each entry from last 2 days, one random entry from past
+*** Lay out clothing for tomorrow
+*** Set a time to go to sleep
+Either absolute (no kenzo) or relative (+20m from unknown time bed entry)
+*** Turn off living room heater
+*** Prep Kenzo night bottle - including 5 drop vit D if not earlier
+*** Tomorrow's goals
+Review weekly goals and set daily goals for tomorrow
