separate example and actual elements and quotes

--- a/todays_routine.org
+++ b/todays_routine.org
@@ -1,5 +1,5 @@
-"What you do is more important than how [much] you do everything else, and doing something well does not make it important." -Tim Ferriss
-"If life-transforming missions could be found with just a little navel-gazing and an optimistic attitude, changing the world would be commonplace." -Cal Newport
+"A man who dares waste an hour of time has not yet discovered the value of life." -Charles Darwin
+"Don't write to please anyone but yourself. The second you start doing it for an audience, you've lost the long game, because creating something reliable and sustainable over the long run requires, most of all, keeping yourself excited about it." -Maria Popova
 ** 1. morning
 *** Did yesterday's routines?
 Write down on a piece of displayed paper priority level and if did routines yesterday
