write path editable with env value

--- a/todays_routine.org
+++ b/todays_routine.org
@@ -1,5 +1,5 @@
-"A man who dares waste an hour of time has not yet discovered the value of life." -Charles Darwin
-"Don't write to please anyone but yourself. The second you start doing it for an audience, you've lost the long game, because creating something reliable and sustainable over the long run requires, most of all, keeping yourself excited about it." -Maria Popova
+"Being a professional is doing the things you love to do, on the days you don't feel like doing them." -Juilus Irving
+"The moment when you feel that, just possibly, you're walking down the street naked, exposing too much of your heart and mind and what exists on the inside, showing too much of yourself. That's the moment you may be starting to get it right." -Neil Gaiman
 ** 1. morning
 *** Did yesterday's routines?
 Write down on a piece of displayed paper priority level and if did routines yesterday
